Variablized common dirs

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -18,5 +18,11 @@ basicPackages:
  - neovim
  - tcpdump
 
+commonDirUrwx:
+ - /root/bin
+
+commonDirUrwxGrxOrx:
+ - /srv
+
 ubuntuPackages:
  - telnet-ssl
